--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: node_js
+addons:
+  ssh_known_hosts: mml.arces.unibo.it
 node_js:
 - stable
 - '6'
 - '4'
-before_install:
+before_deploy:
 - openssl aes-256-cbc -K $encrypted_1f9337d48a45_key -iv $encrypted_1f9337d48a45_iv
-  -in deploy_rsa.enc -out deploy_rsa -d
+  -in deploy_rsa.enc -out /tmp/deploy_rsa -d
+- eval "$(ssh-agent -s)"
+- chmod 600 /tmp/deploy_rsa
+- ssh-add /tmp/deploy_rsa
+
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet $TRAVIS_BUILD_DIR/ <ssh-user>@<deploy-host>:/var/www/html/apps/swamp/calibration
+  on:
+    branch: master
