--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: node_js
+language: minimal
 addons:
   ssh_known_hosts: mml.arces.unibo.it
-- script: echo "nothing to do" 
+
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_1f9337d48a45_key -iv $encrypted_1f9337d48a45_iv
   -in deploy_rsa.enc -out /tmp/deploy_rsa -d
